# chat-finance-plugin

./: .gitignore  equities.py  main.py  pyproject.toml
